sources/api/schnauzer/tests/templates/fails/03_invalid_frontmatter_delim.template
[required-extensions]
motd = "v1"
+.+
